app-deployment-only.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-svc-helidon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc-helidon
      version: v1
  template:
    metadata:
      labels:
        app: user-svc-helidon
        version: v1
    spec:
      containers:
      - name: user-svc-helidon
        image: iad.ocir.io/ateamsaas/user-svc-helidon:latest
        command: ["java", "-jar"]
        args:
        - "-Doracle.net.wallet_location=/helidon/wallet"
        - "-Doracle.net.authentication_services=(TCPS)"
        - "-Doracle.net.tns_admin=/helidon/wallet"
        - "-Djavax.net.ssl.trustStore=/helidon/wallet/cwallet.sso"
        - "-Djavax.net.ssl.trustStoreType=SSO"
        - "-Djavax.net.ssl.keyStore=/helidon/wallet/cwallet.sso"
        - "-Djavax.net.ssl.keyStoreType=SSO"
        - "-Doracle.net.ssl_server_dn_match=true"
        - "-Doracle.net.ssl_version=1.2"
        - "-Ddatasource.username=$(DB_USER)"
        - "-Ddatasource.password=$(DB_PASSWORD)"
        - "-Ddatasource.url=$(DB_URL)"
        - "user-svc.jar"
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      hostAliases:
       - ip: 10.0.0.6
         hostnames:
         - host-xfhpd-scan.sub12111020020.atpdvcn.oraclevcn.com
      imagePullSecrets:
      - name: ocirsecret
---
