app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc-helidon
  labels:
    app: user-svc-helidon
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: user-svc-helidon
