app-gateway-pepsi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: usersvc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usersvc
spec:
  hosts:
  - "*"
  gateways:
  - usersvc-gateway
  http:
  - match:
    - uri:
        prefix: "/pepsi/user"
    rewrite:
      uri: "/user"
    route:
    - destination:
        host: user-svc-helidon
        port:
          number: 80
